Добавлены картинки. В папку img/ и в разметку.

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="page-header__nav">
         <a class="page-header__logo" href="index.html">
-          <img class="page-header__img" src="http://placehold.it/111x24" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
+          <img class="page-header__img" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
         <ul class="page-nav page-nav--main">
           <li class="page-nav__item">
@@ -56,17 +56,17 @@
       <section class="card-gallery">
         <h2 class="visually-hidden">Галерея товара</h2>
         <p class="card-gallery__full">
-          <img class="card-gallery__full-img" src="http://placehold.it/460x498" width="460" height="498" alt="Фото всего набора">
+          <img class="card-gallery__full-img" src="img/product-gallery-1.jpg" width="460" height="498" alt="Фото всего набора">
         </p>
         <ul class="card-gallery__preview">
           <li class="card-gallery__preview-item">
-            <img class="card-gallery__img" src="http://placehold.it/140x149" width="140" height="149" alt="Фото в анфас">
+            <img class="card-gallery__img" src="img/product-gallery-2.jpg" width="140" height="149" alt="Фото в анфас">
           </li>
           <li class="card-gallery__preview-item">
-            <img class="card-gallery__img" src="http://placehold.it/140x149" width="140" height="149" alt="Фото в профиль">
+            <img class="card-gallery__img" src="img/product-gallery-3.jpg" width="140" height="149" alt="Фото в профиль">
           </li>
           <li class="card-gallery__preview-item">
-            <img class="card-gallery__img" src="http://placehold.it/140x149" width="140" height="149" alt="Фото отдельной части">
+            <img class="card-gallery__img" src="img/product-gallery-4.jpg" width="140" height="149" alt="Фото отдельной части">
           </li>
         </ul>
       </section>
