--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="page-header__nav">
         <a class="page-header__logo" href="index.html">
-          <img class="page-header__img" src="http://placehold.it/111x24" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
+          <img class="page-header__img" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
         <ul class="page-nav page-nav--main">
           <li class="page-nav__item">
@@ -67,7 +67,7 @@
             </h3>
             <p class="products__card-image">
               <a class="products__card-link-img" href="catalog-item.html">
-                <img class="products__card-img" src="http://placehold.it/220x165" width="220" height="165" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
+                <img class="products__card-img" src="img/product-card-1.jpg" width="220" height="165" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
               </a>
             </p>
             <p class="products__card-price">
@@ -85,7 +85,7 @@
             </h3>
             <p class="products__card-image">
               <a class="products__card-link-img" href="catalog-item.html">
-                <img class="products__card-img" src="http://placehold.it/220x165" width="220" height="165" alt="Увлажняющий кондиционер &laquo;Baxter of California&raquo;">
+                <img class="products__card-img" src="img/product-card-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &laquo;Baxter of California&raquo;">
               </a>
             </p>
             <p class="products__card-price">
@@ -103,7 +103,7 @@
             </h3>
             <p class="products__card-image">
               <a class="products__card-link-img" href="catalog-item.html">
-                <img class="products__card-img" src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &laquo;Suavecito&raquo;">
+                <img class="products__card-img" src="img/product-card-3.jpg" width="220" height="165" alt="Гель для волос &laquo;Suavecito&raquo;">
               </a>
             </p>
             <p class="products__card-price">
@@ -121,7 +121,7 @@
             </h3>
             <p class="products__card-image">
               <a class="products__card-link-img" href="catalog-item.html">
-                <img class="products__card-img" src="http://placehold.it/220x165" width="220" height="165" alt="Глина для укладки волос &laquo;American crew&raquo;">
+                <img class="products__card-img" src="img/product-card-4.jpg" width="220" height="165" alt="Глина для укладки волос &laquo;American crew&raquo;">
               </a>
             </p>
             <p class="products__card-price">
@@ -139,7 +139,7 @@
             </h3>
             <p class="products__card-image">
               <a class="products__card-link-img" href="catalog-item.html">
-                <img class="products__card-img" src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &laquo;American crew&raquo;">
+                <img class="products__card-img" src="img/product-card-5.jpg" width="220" height="165" alt="Гель для волос &laquo;American crew&raquo;">
               </a>
             </p>
             <p class="products__card-price">
@@ -157,7 +157,7 @@
             </h3>
             <p class="products__card-image">
               <a class="products__card-link-img" href="catalog-item.html">
-                <img class="products__card-img" src="http://placehold.it/220x165" width="220" height="165" alt="Набор для бритья &laquo;Baxter of California&raquo;">
+                <img class="products__card-img" src="img/product-card-6.jpg" width="220" height="165" alt="Набор для бритья &laquo;Baxter of California&raquo;">
               </a>
             </p>
             <p class="products__card-price">
