--- a/price.html
+++ b/price.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="page-header__nav">
         <a class="page-header__logo" href="index.html">
-          <img class="page-header__img" src="http://placehold.it/111x24" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
+          <img class="page-header__img" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
         <ul class="page-nav page-nav--main">
           <li class="page-nav__item">
