--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="page-header__nav">
         <a class="page-header__logo">
-          <img class="page-header__img" src="http://placehold.it/368x204" width="368" height="204" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
+          <img class="page-header__img" src="img/index-logo.svg" width="368" height="204" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
         <ul class="page-nav page-nav--main">
           <li class="page-nav__item">
@@ -77,7 +77,7 @@
         <h2 class="gallery__headline">Фотогалерея</h2>
         <figure class="gallery__content">
           <a class="gallery__content-link" href="#">
-            <img class="gallery__content-img" src="http://placehold.it/286x164" width="286" height="164" alt="Интерьер">
+            <img class="gallery__content-img" src="img/gallery-photo.jpg" width="286" height="164" alt="Интерьер">
           </a>
         </figure>
         <span class="button gallery__button gallery__button-back">Назад</span>
