--- a/price.html
+++ b/price.html
@@ -9,7 +9,7 @@
   <body class="page">
     <header class="page-header">
       <nav class="page-header__nav">
-        <a class="page-header__logo" href="index.html">
+        <a class="page-header__logo" href="index.html" aria-label="Логотип">
           <img class="page-header__img" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
         <ul class="page-nav page-nav--main">
@@ -31,7 +31,7 @@
         </ul>
         <ul class="page-nav page-nav--user">
           <li class="page-nav__link login-link">
-            <a class="page-nav__link" href="">Вход</a>
+            <a class="page-nav__link" href="login.html">Вход</a>
           </li>
         </ul>
       </nav>
@@ -89,42 +89,63 @@
       </section>
     </main>
     <footer class="page-footer">
-      <p class="page-footer__contacts">
-        Барбершоп &laquo;Borodinski&raquo;<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a class="page-footer__link" href="map.html">Как нас найти?</a><br>
-        Телефон: +7 (812) 666-02-66
-      </p>
-      <div class="page-footer__social">
-        <b class="page-footer__bold-text">Давайте дружить!</b>
-        <ul class="page-footer__social-list">
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="#">Вконтакте</a>
-          </li>
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="#">Фейсбук</a>
-          </li>
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="#">Инстаграм</a>
-          </li>
-        </ul>
-      </div>
-      <p class="page-footer__copyright">
-        <b class="page-footer__bold-text">Разработано:</b>
-        <a class="page-footer__button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </footer>
+        <p class="page-footer__contacts">
+          Барбершоп &laquo;Borodinski&raquo;<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a class="page-footer__link" href="map.html">Как нас найти?</a><br>
+          Телефон: <a class="page-footer__phone-link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
+        </p>
+        <div class="page-footer__social">
+          <b class="page-footer__bold-text">Давайте дружить!</b>
+          <ul class="page-footer__social-list">
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-button" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
+            </li>
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-button" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
+            </li>
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-button" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
+            </li>
+          </ul>
+        </div>
+        <p class="page-footer__copyright">
+          <b class="page-footer__bold-text">Разработано:</b>
+          <a class="page-footer__button" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
+        </p>
+      </footer>
 
-    <section class="modal modal-login">
-      <h2 class="modal-login__headline">Личный кабинет</h2>
-      <p class="modal-login__paragraph">Введите пожалуйста свой логин и пароль</p>
-      <!-- Место для формы -->
-      <span class="modal-close"></span>
-    </section>
+      <section class="modal modal-login">
+        <h2 class="modal-login__headline">Личный кабинет</h2>
+        <p class="modal-login__info">Введите пожалуйста свой логин и пароль</p>
+        <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="post">
+          <p class="modal-login__form-paragraph">
+            <label class="visually-hidden" for="user-login">Логин</label>
+            <input class="modal-login__form-input" type="text" name="login" id="user-login" placeholder="Логин">
+          </p>
+          <p class="modal-login__form-paragraph">
+            <label class="visually-hidden" for="user-password">Пароль</label>
+            <input class="modal-login__form-input" type="password" name="login" id="user-password" placeholder="Пароль">
+          </p>
+          <p class="modal-login__form-paragraph">
+            <label class="modal-login__form-label" for="remember-me">
+              <input class="visually-hidden" type="checkbox" name="remember" id="remember-me" checked>
+              <span class="modal-login__form-indicator"></span>
+              Запомните меня
+            </label>
+            <a class="modal-login__form-restore" href="restorepass.html" target="_blank">Я забыл пароль!</a>
+          </p>
+          <button class="modal-login__form-submit" type="submit">Войти</button>
+        </form>
+        <button class="modal-close"></button>
+      </section>
 
-    <section class="modal modal-map">
-      <h2 class="visually-hidden">Как до нас добраться</h2>
-      <span class="modal-close"></span>
-    </section>
+      <section class="modal modal-map">
+        <h2 class="visually-hidden">Как до нас добраться</h2>
+        <a class="modal-map__link" href="https://yandex.ru/maps" aria-label="Яндекс карты" target="_blank">
+          <img class="modal-map__img" src="img/map.jpg" width="766" height="560" alt="Карта">
+        </a>
+        <button class="modal-close"></button>
+      </section>
   </body>
 </html>
